--- a/src/scss/UC.scss
+++ b/src/scss/UC.scss
@@ -3,6 +3,7 @@
 @use "sass:selector";
 @use "sass:color";
 @use "helpers";
+@use "base";
 @use "modularscale-sass/stylesheets/_modularscale.scss" as *;
 @use "maps";
 @use "sass:meta";
@@ -29,13 +30,7 @@ $modularscale: (
   ),
 );
 
-body {
-  line-height: 1.3;
-  margin: 0 auto;
-  padding: 10% 5% 50%;
-  max-width: 42em;
-  font-size: ms(0);
-}
+
 
 @mixin breakpointLoop($breakpoints) {
   // create mobile first rule
@@ -109,7 +104,7 @@ body {
 @each $type, $map in maps.$css-properties {
   $base: map.get($map, name);
   $separator: '_';
-  @if ($base == '.') {
+  @if ($base == '') {
     $separator: '';
   }
   $dir: ();
@@ -179,3 +174,9 @@ body {
 // else loop through units
 // End loops
 // End Each
+
+
+.ul_none{
+  @extend .m_0;
+  @extend .p_0;
+}
