--- a/src/scss/maps/_colors.scss
+++ b/src/scss/maps/_colors.scss
@@ -1,6 +1,6 @@
-$teal: #198dae;
+$teal: #3182bd;
 $dark-grey: #676a72;
-$orange: #da8210;
+$orange: #e6550d;
 $black: #101010;
 $white: #fdfdfd;
 $theme-palette: (
