Unit miss match on logic css.

--- a/src/scss/maps/_units.scss
+++ b/src/scss/maps/_units.scss
@@ -40,7 +40,7 @@ $units: (
 		),
 		bl: (
 			fallback: bottom-left,
-			logical: start-end,
+			logical: end-start,
 		),
 		br: (
 			fallback: bottom-right,
