expanded margin and cursor

--- a/src/scss/maps/_css-properties.scss
+++ b/src/scss/maps/_css-properties.scss
@@ -170,6 +170,15 @@ $css-properties: (
         ),
         unit: 'size',
     ),
+    cursor:(
+        name: '',
+        direction: null,
+        responsive: false,
+        property: (
+            'cursor',
+        ),
+        unit: 'cursor',
+    )
     margin-horizontal: (
         name: 'm-x',
         direction: null,
