--- a/src/scss/maps/_css-properties.scss
+++ b/src/scss/maps/_css-properties.scss
@@ -178,7 +178,7 @@ $css-properties: (
             'cursor',
         ),
         unit: 'cursor',
-    )
+    ),
     margin-horizontal: (
         name: 'm-x',
         direction: null,
