--- a/src/scss/maps/_css-properties.scss
+++ b/src/scss/maps/_css-properties.scss
@@ -125,6 +125,15 @@ $css-properties: (
         ),
         unit: 'font-size',
         responsive: true,
+    ),    
+    font-size-adjust: (
+        name: 'font-size',
+        direction: null,
+        property: (
+            'font-size',
+        ),
+        unit: 'font-size',
+        responsive: true,
     ),
     font-weight: (
         name: 'font',
