--- a/src/scss/maps/_units.scss
+++ b/src/scss/maps/_units.scss
@@ -62,46 +62,20 @@ $units: (
 		lg: 1024px,
 		xl: 1200px
 	),
-	size: (
-		0: 0,
-		n6: -4 * $basicSizeMultiplier,
-		n7: -8 * $basicSizeMultiplier,
-		n8: -16 * $basicSizeMultiplier,
-		n9: -32 * $basicSizeMultiplier,
+	unset:(unset:unset),
+	auto:(auto:auto),
+	100:(100:100%),
+	size-negative: (		
 		n10: -64 * $basicSizeMultiplier,
+		n9: -32 * $basicSizeMultiplier,
+		n8: -16 * $basicSizeMultiplier,
+		n7: -8 * $basicSizeMultiplier,
+		n6: -4 * $basicSizeMultiplier,
 		n5: -2 * $basicSizeMultiplier,
 		n4: -1 * $basicSizeMultiplier,
 		n3: -0.5 * $basicSizeMultiplier,
 		n2: -0.25 * $basicSizeMultiplier,
 		n1: -1px,
-		1: 1px,
-		2: 0.25 * $basicSizeMultiplier,
-		3: 0.5 * $basicSizeMultiplier,
-		4: 1 * $basicSizeMultiplier,
-		5: 2 * $basicSizeMultiplier,
-		6: 4 * $basicSizeMultiplier,
-		7: 8 * $basicSizeMultiplier,
-		8: 16 * $basicSizeMultiplier,
-		9: 32 * $basicSizeMultiplier,
-		10: 64 * $basicSizeMultiplier,
-		auto: auto,
-		unset: unset,
-	),
-	sizeAlt: (
-		100: 100%,
-		auto: auto,
-		unset: unset,
-		0: 0,
-		n5: -2 * $basicSizeMultiplier,
-		n4: -1 * $basicSizeMultiplier,
-		n3: -0.5 * $basicSizeMultiplier,
-		n2: -0.25 * $basicSizeMultiplier,
-		n1: -1px,
-		1: 1px,
-		2: 0.25 * $basicSizeMultiplier,
-		3: 0.5 * $basicSizeMultiplier,
-		4: 1 * $basicSizeMultiplier,
-		5: 2 * $basicSizeMultiplier,
 	),
 	size-positive: (
 		0: 0,
@@ -116,18 +90,12 @@ $units: (
 		9: 32 * $basicSizeMultiplier,
 		10: 64 * $basicSizeMultiplier,
 	),
-	unitless: (
-		0: 0,
+	unitless-negative: (
 		n5: -5,
 		n4: -4,
 		n3: -3,
 		n2: -2,
 		n1: -1,
-		1: 1,
-		2: 2,
-		3: 3,
-		4: 4,
-		5: 5,
 	),
 	unitless-positive: (
 		0: 0,
@@ -182,11 +150,11 @@ $units: (
 		5: 90%,
 	),
 	percent-negative: (
-		n1: 10%,
-		n2: 25%,
-		n3: 45%,
-		n4: 60%,
-		n5: 75%,
+		n1: -15%,
+		n2: -37%,
+		n3: -60%,
+		n4: -78%,
+		n5: -90%,
 	),
 	width-percent: (
 		auto: auto,
