--- a/src/scss/maps/_css-properties.scss
+++ b/src/scss/maps/_css-properties.scss
@@ -42,7 +42,7 @@ $css-properties: (
         'responsive': false,
         'states': true,
         'unit': (
-            'percent-negative','percent-positive'
+            'decimal-negative','decimal-positive'
         ),
     ),
     'background-position': (
@@ -66,7 +66,7 @@ $css-properties: (
         'responsive': false,
         'states': true,
         'unit': (
-            'percent',
+            'decimal-negative','decimal-positive'
         ),
     ),
     'border-radius': (
@@ -196,7 +196,7 @@ $css-properties: (
         'responsive': false,
         'states': true,
         'unit': (
-            'percent-negative','percent-positive',
+            'decimal-negative','decimal-positive'
         ),
     ),
     'font-family': (
