--- a/src/scss/data/_index.scss
+++ b/src/scss/data/_index.scss
@@ -1,4 +1,4 @@
-@use "presenters";
+@use "presenter";
 @use "agenda";
-@use "sessions";
-@use "presentations";
+@use "session";
+@use "presentation";
