--- a/src/scss/data/_presenter.scss
+++ b/src/scss/data/_presenter.scss
@@ -1,30 +1,30 @@
-%Data.Presenters {
+%Data.Presenter {
 }
 /*
-Presenters 
+Presenter 
 
 Description:
 An educator who created or participated in a presentation
 
 Weight:1000
 
-Styleguide Data.Presenters
+Styleguide Data.Presenter
 */
 
-%Data.Presenters.Photo {
+%Data.Presenter.Photo {
 }
 
 /*
 Photo
  
 Description:
-A photo of the Presenters member
+A photo of the Presenter member
  
 Markup:
 <img
     class="aspect_1x1 w_100"
     src="https://i.pravatar.cc/300"
-    alt="{{> "Data.Presenters.FullName" }}"
+    alt="{{> "Data.Presenter.FullName" }}"
 />
 
 MarkupWrapperClasses: max-w_30
@@ -33,14 +33,14 @@ FORMAT: 300px by 300px
 
 Weight:0
 
-Styleguide Data.Presenters.Photo
+Styleguide Data.Presenter.Photo
 */
-%Data.Presenters.FullName {
+%Data.Presenter.FullName {
 }
 /*
 Full Name
  
-The full name of the Presenters member
+The full name of the Presenter member
  
 Markup: Pepper H. Soda III, MD, FACC
  
@@ -49,15 +49,15 @@ FORMAT: First Name MI (if known) Last Name Suffix (Jr., Sr., the III ), Optional
 
 Weight:0
  
-Styleguide Data.Presenters.FullName
+Styleguide Data.Presenter.FullName
 */
-%Data.Presenters.Location {
+%Data.Presenter.Location {
 }
 /*
 Location
  
 Description:
-The location of the Presenters member
+The location of the Presenter member
  
 Markup: New York, NY, USA
  
@@ -67,18 +67,18 @@ FORMAT: City, State, Country
 
 NOTE:  if the conference country is USA you can drop the country if it is USA.
 
-Styleguide Data.Presenters.Location
+Styleguide Data.Presenter.Location
 */
-%Data.Presenters.Title {
+%Data.Presenter.Title {
 }
 /*
 Title
  
 Description:
-the roles of the Presenters member within the session
+the roles of the Presenter member within the session
  
 Markup:
-{{> "Data.Presenters.Title.InstitutionTitle" }}, {{> "Data.Presenters.Title.InstitutionDivision" }}, {{> "Data.Presenters.Title.Institution" }}
+{{> "Data.Presenter.Title.InstitutionTitle" }}, {{> "Data.Presenter.Title.InstitutionDivision" }}, {{> "Data.Presenter.Title.Institution" }}
  
 
 
@@ -90,111 +90,111 @@ EXPERIMENTAL: This is not an approved data point.
 
 Weight:100
 
-Styleguide Data.Presenters.Title
+Styleguide Data.Presenter.Title
 */
-%Data.Presenters.Institution {
+%Data.Presenter.Institution {
 }
 /*
 Institution
  
 Description:
-Institution of the Presenters member where they hold a title
+Institution of the Presenter member where they hold a title
  
 Markup:
 Mount SugarLoaf Hospital
  
 Weight:101
  
-Styleguide Data.Presenters.Title.Institution
+Styleguide Data.Presenter.Title.Institution
 */
-%Data.Presenters.InstitutionDivision {
+%Data.Presenter.InstitutionDivision {
 }
 /*
 Institution Division
  
 Description:
-The Division of the Institution of the Presenters member where they hold a title
+The Division of the Institution of the Presenter member where they hold a title
  
 Markup:
 Mount SugarLoaf Hospital
  
 Weight:102
  
-Styleguide Data.Presenters.Title.InstitutionDivision
+Styleguide Data.Presenter.Title.InstitutionDivision
 */
-%Data.Presenters.InstitutionTitle {
+%Data.Presenter.InstitutionTitle {
 }
 /*
 Institutional Title
  
 Description:
-the roles of the Presenters member within the session
+the roles of the Presenter member within the session
  
 Markup:
 Physician-in-Chief
  
 Weight:103
  
-Styleguide Data.Presenters.Title.InstitutionTitle
+Styleguide Data.Presenter.Title.InstitutionTitle
 */
-%Data.Presenters.TwitterHandle {
+%Data.Presenter.TwitterHandle {
 }
 /*
 Twitter Handle
  
 Description:
-The handle of the Presenters member on twitter
+The handle of the Presenter member on twitter
  
 Markup:
 Tweat_DrSoda
  
 Weight:0
  
-Styleguide Data.Presenters.TwitterHandle
+Styleguide Data.Presenter.TwitterHandle
 */
 
-%Data.Presenters.Role {
+%Data.Presenter.Role {
 }
 /*
 Role
  
 Description:
-the roles of the Presenters member within the session
+the roles of the Presenter member within the session
  
 Markup:
 Co-Chair
  
 Weight:0
  
-Styleguide Data.Presenters.Role
+Styleguide Data.Presenter.Role
 */
-%Data.Presenters.Bio {
+%Data.Presenter.Bio {
 }
 /*
 Bio
  
 Description:
-simple html text that describes the Presenters member
+simple html text that describes the Presenter member
  
 Markup:
 <p>Omnis laboriosam vero dolorum harum nihil debitis placeat eligendi. Molestiae voluptatibus nemo eveniet. Vero ipsum eius. Alias sapiente quidem dolore dolorem atque alias est.</p>
  
 Weight:0
  
-Styleguide Data.Presenters.Bio
+Styleguide Data.Presenter.Bio
 */
-%Data.Presenters.ID {
+%Data.Presenter.ID {
 }
 /*
 Identification Number
  
 Description:
-this id can both be used to link to the Presenters member's page, the member's image, and disclosures
+this id can both be used to link to the Presenter member's page, the member's image, and disclosures
  
 Markup:
 122154254
  
 Weight:0
  
-Styleguide Data.Presenters.ID
+Styleguide Data.Presenter.ID
 */
